# cellular-automata

./: .clang-format  CHANGELOG.md  setup.sh
src/: dummy.h
src/al/: game_of_life.cc  game_of_life.h  growth_mapping.cc  growth_mapping.h  kernel.cc  kernel.h  lenia.cc  lenia.h
src/exception/: exception.cc  exception.h
src/grid/: fast_grid.cc  fast_grid.h  grid.cc  grid.h  rect_grid.cc  rect_grid.h
src/gui/: gui.cc  gui.h  gui_algorithms.cc  gui_algorithms.h
src/kernel/: exponential.cc  exponential.h  fast_game_of_life.cc  fast_game_of_life.h  fast_kernel.cc  fast_kernel.h  game_of_life.cc  game_of_life.h  kernel.cc  kernel.h  kernel_algorithms.h  rectangular.cc  rectangular.h
src/util/: random.cc  random.h  timer.cc  timer.h
test/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  dummy.h  main.cc
test/unit_tests/al/: game_of_life.h  growth_mapping.h  kernel.h  lenia.h
test/unit_tests/game_of_life/: game_of_life.h  kernel.h
test/unit_tests/grid/: fast_grid.h  grid.h  rect_grid.h
test/unit_tests/kernel/: fast_game_of_life.h  fast_kernel.h  game_of_life.h  kernel.h  rectangular.h
test/visualization/: CMakeLists.txt  main.cc
